--- a/gb/21/9/20/n13247481.md
+++ b/gb/21/9/20/n13247481.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uimzxm315/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uimzxm315/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uimzxm315/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uimzxm315/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>俄罗斯大学发生枪击案 至少8死多人受伤</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2012/07/1207171555311117-600x400.jpg" />
 <h6>俄罗斯一所大学2021年9月20日发生枪击案，造成至少8人死亡。这是俄罗斯不到半年内再次发生校园枪击事件。图为枪击案现场示意图。（周月谛／大纪元） 
 </h6>
 <hr>
-	<p>【大纪元2021年09月20日讯】（大纪元记者李言综合报导）俄罗斯执法部门表示，周一（9月21日），一名<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E6%8C%81%E6%9E%AA.md#1">持枪</a>学生在俄罗斯彼尔姆市（Perm）一所大学开火，造成至少8人死亡，多人受伤。</p>
+	<p>【大纪元2021年09月20日讯】（大纪元记者李言综合报导）俄罗斯执法部门表示，周一（9月21日），一名<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%8C%81%E6%9E%AA.md#1">持枪</a>学生在俄罗斯彼尔姆市（Perm）一所大学开火，造成至少8人死亡，多人受伤。</p>
 <p>彼尔姆国立大学（Perm State University）在其Telegram频道上说，一名嫌疑人于周一上午“携带攻击性武器”进入该校校园，开始射击。</p>
-<p>据俄新社报导，该大学新闻处说，<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB%E6%A1%88.md#1">枪击案</a>过程中，一些学生和教师把自己锁在教室里。</p>
+<p>据俄新社报导，该大学新闻处说，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB%E6%A1%88.md#1">枪击案</a>过程中，一些学生和教师把自己锁在教室里。</p>
 <p>“教室里大约有60人。”学生谢苗·卡里亚金（Semyon Karyakin）告诉路透社：“我们关上了门，用椅子挡住了门。”</p>
 <p>当地媒体拍摄的录像显示，惊慌失措的学生从二楼窗户扔出个人物品，然后跳到地上逃生。<ahref="https://twitter.com/siberian_times/status/1439867979223629825?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1439867979223629825%7Ctwgr%5E%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Fwww.cna.com.tw%2Fnews%2Ffirstnews%2F202109200145.aspx" target="_blank" rel="noopener noreferrer">点击这里观看视频</a>。）</p>
 <p>该校位于莫斯科以东约1,300公里（800英里）。</p>
@@ -22,11 +22,11 @@
 <p>克里姆林宫说，这名枪手很可能是有精神障碍，但拒绝进一步评论，说这是警方的事。</p>
 <p>调查委员会执法部门在一份声明中说，枪手在拒捕后受伤，正在医院接受治疗。</p>
 <p>大学发言人娜塔莉亚·佩奇舍娃（Natalia Pechishcheva）早些时候说，枪手已被“清算”，但后来说他被警方拘留。现场录像显示，他俯卧在校园内的地面上。</p>
-<h2>普京呼吁加强民用<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md#1">枪支</a>管理</h2>
+<h2>普京呼吁加强民用<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md#1">枪支</a>管理</h2>
 <p>周一的事件标志着今年在俄罗斯校园发生的第二起大规模枪击事件。5月，位于该国中部的喀山市（Kazan）发生一起类似血案。当时一名19岁枪手返回母校开火，造成9人死亡。</p>
-<p>这是近年来发生在俄罗斯校园最致命的<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB%E6%A1%88.md#1">枪击案</a>。2018年，俄罗斯附属克里米亚（Crimea）一所大学的一名学生开枪杀死20人后，饮弹自尽。</p>
-<p>喀山枪击事件发生后，普京呼吁加强对平民<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E6%8C%81%E6%9E%AA.md#1">持枪</a>的监管。</p>
-<p>“我认为，为了防止此类犯罪，有必要大幅收紧对民用<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md#1">枪支</a>所有权的要求，并加强对民用枪支的控制。”据塔斯社当时报导，普京在一次内阁会议上说：“关于这个问题的决定应该是合理的，当然也是严厉的。”</p>
+<p>这是近年来发生在俄罗斯校园最致命的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB%E6%A1%88.md#1">枪击案</a>。2018年，俄罗斯附属克里米亚（Crimea）一所大学的一名学生开枪杀死20人后，饮弹自尽。</p>
+<p>喀山枪击事件发生后，普京呼吁加强对平民<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%8C%81%E6%9E%AA.md#1">持枪</a>的监管。</p>
+<p>“我认为，为了防止此类犯罪，有必要大幅收紧对民用<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md#1">枪支</a>所有权的要求，并加强对民用枪支的控制。”据塔斯社当时报导，普京在一次内阁会议上说：“关于这个问题的决定应该是合理的，当然也是严厉的。”</p>
 <p>他还说，“所有发放持枪许可证和向武器所有者提供必要文件的官员都应该承担个人责任。”</p>
 <p>俄罗斯严格限制平民拥有枪支，但允许本国人在通过测试并满足相关要求的前提下持有一些类别的枪支，例如用于狩猎、自卫或运动的枪支。</p>
 <p>喀山枪击案发生后，俄罗斯将购买枪支的法定年龄从18岁提高到21岁，但新法律尚未生效。</p>
@@ -36,41 +36,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13221130.md#1">劳动节长周末11名温哥华警官遇袭受伤</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220674.md#1">周末市中心拍电视剧  Burrard桥将锁路</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220614.md#1">快餐厅美食广场就餐无需出示疫苗卡</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220595.md#1">9月8日：新增814宗确诊</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/30/n10526970.md#1">魔鬼在统治着我们的世界(18)：教育篇(上)</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753158.md#1">马斯克拟建上千艘飞船 送百万人移居火星</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753127.md#1">俄军导弹袭击基辅 莫斯科：摧毁国外捐赠坦克</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753095.md#1">美韩发射8枚导弹 秀精准打击能力回呛朝鲜</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/23/n11541717.md#1" target="_blank">林辉：中共70年前承诺建立美国式民主在哪里？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11489359.md#1" target="_blank">法轮功洪传欧洲 多族裔民众：找到生命意义</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9782865.md#1" target="_blank">你不了解的邓小平：反右运动总指挥（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/16/n13238162.md#1">美国男子自称遭外星人多次绑架和植入晶片</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13237143.md#1">【百年真相】最惨海归博士 萧光琰文革遭灭门</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/6/n13213473.md#1">古今两个中秋礼俗各异 古代不送月饼 月饼何时普及？</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13233994.md#1">【未解之谜】前世情未了 今生续前缘</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13234196.md#1">【未解之谜】偿还业债 转世变成了动物</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242167.md#1">【财商天下】恒大如炸弹 救或不救中共陷两难</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242254.md#1">【时事军事】日本三款导弹 对准中共海军</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245201.md#1">【马克时空】澳洲改买美核潜艇 维吉尼亚级核潜艇有多牛</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13242870.md#1">消息：李嘉诚再次出售大陆地产项目</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240636.md#1">中共何以令一位精英人士流亡美国（1）</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13242696.md#1">研究：降低蛋白质出错有助延长寿命</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245464.md#1">李嘉欣富豪丈夫似一夜变老 被拍拄拐杖蹒跚求医</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242350.md#1">范冰冰40岁生日 罕见晒与家人合照</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242592.md#1">杨紫琼晒《尚气》花絮照 大赞梁朝伟和元华</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244546.md#1">朱俐静用餐遭酱汁淋头 对店员态度感到失望</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245793.md#1">被传怀上第三胎 孙俪工作室幽默回应</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242154.md#1">维生素D有4大抗癌功效 补D防癌注意1关键</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242435.md#1">以色列：打疫苗突破感染风险 是自然感染13倍</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244539.md#1">巨型石斑鱼一口咬下鲨鱼 美国船长看傻眼</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13241301.md#1">冬瓜是“减肥瓜” 这样吃不花大钱就变瘦</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13229960.md#1">4种柚子营养、热量谁较高？营养师1招控份量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/20/n13247481.htm">俄罗斯大学发生枪击案 至少8死多人受伤</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/20/n13247481.htm">俄罗斯大学发生枪击案 至少8死多人受伤</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247481.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uimzxm315/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uimzxm315/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uimzxm315/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/21/9/20/n13247481.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
